tests/snapshots/construction_metadata__construction_metadata_acct_not_found.snap
---
source: tests/construction_metadata.rs
expression: response
---
Err(
    AccountNotFound(
        "Sender account not found: B62qpLST3UC1rpVT6SHfB7wqW2iQgiopFAGfrcovPgLjgfpDUN2LLeg",
    ),
)
