tests/snapshots/construction_metadata__construction_metadata_invalid_sender.snap
---
source: tests/construction_metadata.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Sender key not valid: Malformed public key: Input not valid base58",
        ),
    ),
)
