tests/snapshots/construction_metadata__construction_metadata_missing_receiver.snap
---
source: tests/construction_metadata.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Field `receiver` missing",
        ),
    ),
)
