tests/snapshots/construction_metadata__construction_metadata_missing_sender.snap
---
source: tests/construction_metadata.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Field `sender` missing",
        ),
    ),
)
