tests/snapshots/construction_metadata__construction_metadata_missing_token_id.snap
---
source: tests/construction_metadata.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Field `token_id` missing",
        ),
    ),
)
