tests/snapshots/construction_metadata__construction_metadata_ok.snap
---
source: tests/construction_metadata.rs
expression: response
---
Ok(
    ConstructionMetadataResponse {
        metadata: Object {
            "memo": String("test transaction"),
            "nonce": String("2"),
            "receiver": String("B62qnXy1f75qq8c6HS2Am88Gk6UyvTHK3iSYh4Hb3nD6DS2eS6wZ4or"),
            "sender": String("B62qkd6yYALkQMq2SFd5B57bJbGBMA2QuGtLPMzRhhnvexRtVRycZWP"),
            "token_id": String("1"),
            "valid_until": String("20000"),
        },
        suggested_fee: Some(
            [
                Amount {
                    value: "100000000",
                    currency: Currency {
                        symbol: "MINA",
                        decimals: 9,
                        metadata: None,
                    },
                    metadata: Some(
                        Object {
                            "minimum_fee": Object {
                                "currency": Object {
                                    "decimals": Number(9),
                                    "symbol": String("MINA"),
                                },
                                "value": String("1000000"),
                            },
                        },
                    ),
                },
            ],
        ),
    },
)
